[package]
name = "mc-devkit"
version = "0.1.0"
edition = "2021"

[dependencies]
libtermcolor = "1.1.0"
clap = { version = "4.5.11", features = ["color", "derive"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
indicatif = "0.17.8"
url = "2.5.2"
regex = "1.10.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
tempdir = "0.3.7"
futures-util = "0.3.30"
